[Quant][core][improvement] Separated implementations for quantized & non-quantized tensors in item
Summary: This PR is part of a series of PRs addressing https://github.com/pytorch/pytorch/issues/54150,
related to using dispatcher for calls to quantized backends as opposed to if/else conditionals.
This particular PR separates the calls to quantized & non-quantized backends for item
using a dispatcher.
Simultaneous support of CompositeImplicitAutograd and Quantized dispatch keys
was made possible with https://github.com/pytorch/pytorch/pull/74963

Test plan:
There are numerous tests in the suite that make use of torch.Tensor.item.
```
python test/run_test.py
```
can be used for comprehensive evaluation, or alternatively, b/c this PR should not affect torch.Tensor.item calls on non-quantized tensors,
we can specifically test on quantized tensors:
```
python test/test_quantization.py
```

ghstack-source-id: 3264c38306d1c11dd654df6de32bba6d8ed7cab2
Pull Request resolved: https://github.com/pytorch/pytorch/pull/72333

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -5766,6 +5766,9 @@
 
 - func: item(Tensor self) -> Scalar
   variants: method
+  dispatch:
+    CompositeImplicitAutograd: item
+    QuantizedCPU, QuantizedCUDA: item_quantized
 
 - func: result_type.Tensor(Tensor tensor, Tensor other) -> ScalarType
   variants: function
