fix `torch.nn.functional.l1_loss` for complex inputs
ghstack-source-id: e5d6699fc453fb7ecf139c2a08b3d52df86e016a
Pull Request resolved: https://github.com/pytorch/pytorch/pull/65681

Co-authored-by: lezcano <lezcano-93@hotmail.com>

--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -1754,12 +1754,6 @@
   target: kl_div_target_backward(grad, self, target, reduction, log_target)
   result: apply_loss_reduction(kl_div_backward(self_t, self_p, target_p, at::Reduction::None, log_target) +  kl_div_target_backward(target_t, self_p, target_p, at::Reduction::None, log_target), reduction)
 
-
-- name: l1_loss(Tensor self, Tensor target, int reduction=Mean) -> Tensor
-  self: l1_loss_backward(grad, self, target, reduction)
-  target: l1_loss_backward(grad, target, self, reduction)
-  result: apply_loss_reduction(l1_loss_backward(self_t.conj(), self_p, target_p, at::Reduction::None).conj() + l1_loss_backward(target_t.conj(), target_p, self_p, at::Reduction::None).conj(), reduction)
-
 - name: mse_loss(Tensor self, Tensor target, int reduction=Mean) -> Tensor
   self: mse_loss_backward(grad, self, target, reduction)
   target: mse_loss_backward(grad, target, self, reduction)
@@ -1782,6 +1776,13 @@
   self: nll_loss2d_backward(grad, self, target, weight, reduction, ignore_index, total_weight)
   target: non_differentiable
   output: std::get<0>(nll_loss2d_forward(self_t, target, weight, reduction, ignore_index))
+
+- name: l1_loss(Tensor self, Tensor target, int reduction=Mean) -> Tensor
+  self, target: "grad.defined() ? c_to_r_norm_backward(l1_loss_backward(grad, self, target, reduction), self, target) : std::tuple<Tensor, Tensor>()"
+
+- name: l1_loss_backward(Tensor grad_output, Tensor self, Tensor target, int reduction) -> Tensor
+  grad_output: handle_r_to_c(grad_output.scalar_type(), l1_loss_backward(grad, self.conj(), target.conj(), reduction))
+  self, target: "grad.defined() ? c_to_r_norm_backward(l1_loss_double_backward(grad, grad_output, self, target, reduction), self, target) : std::tuple<Tensor, Tensor>()"
 
 - name: smooth_l1_loss(Tensor self, Tensor target, int reduction=Mean, float beta=1.0) -> Tensor
   self: smooth_l1_loss_backward(grad, self, target, reduction, beta)
@@ -2199,11 +2200,6 @@
   grad_output: hardtanh_backward(grad, self, min_val, max_val)
   self: zeros_like(grad)
   result: at::where((self_p > min_val).logical_and(self_p < max_val), grad_output_t, at::zeros({}, result.options()).expand_as(result))
-
-- name: l1_loss_backward(Tensor grad_output, Tensor self, Tensor target, int reduction) -> Tensor
-  grad_output: l1_loss_double_backward_grad_output(grad, grad_output, self, target, reduction)
-  self: l1_loss_double_backward(grad, grad_output, self, target, reduction)
-  target: l1_loss_double_backward(grad, grad_output, target, target, reduction)
 
 - name: log_sigmoid_backward(Tensor grad_output, Tensor self, Tensor buffer) -> Tensor
   grad_output: log_sigmoid_backward(grad, self, buffer)
