--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -8696,26 +8696,6 @@
   dispatch:
     CPU, CUDA: mse_loss_backward
 
-- func: l1_loss.out(Tensor self, Tensor target, int reduction=Mean, *, Tensor(a!) out) -> Tensor(a!)
-  python_module: nn
-  dispatch:
-    CompositeExplicitAutograd: l1_loss_out
-
-- func: l1_loss(Tensor self, Tensor target, int reduction=Mean) -> Tensor
-  python_module: nn
-  dispatch:
-    CompositeExplicitAutograd: l1_loss
-
-- func: l1_loss_backward.grad_input(Tensor grad_output, Tensor self, Tensor target, int reduction, *, Tensor(a!) grad_input) -> Tensor(a!)
-  python_module: nn
-  dispatch:
-    CPU, CUDA: l1_loss_backward_out
-
-- func: l1_loss_backward(Tensor grad_output, Tensor self, Tensor target, int reduction) -> Tensor
-  python_module: nn
-  dispatch:
-    CompositeExplicitAutograd: l1_loss_backward
-
 - func: multi_margin_loss.out(Tensor self, Tensor target, Scalar p=1, Scalar margin=1, Tensor? weight=None, int reduction=Mean, *, Tensor(a!) out) -> Tensor(a!)
   python_module: nn
   dispatch:
@@ -8831,6 +8811,23 @@
     CPU: nll_loss2d_backward_cpu
     CUDA: nll_loss2d_backward_cuda
 
+- func: l1_loss.out(Tensor self, Tensor target, int reduction=Mean, *, Tensor(a!) out) -> Tensor(a!)
+  device_check: NoCheck   # TensorIterator
+  python_module: nn
+  dispatch:
+    CPU, CUDA: l1_loss_out
+
+- func: l1_loss(Tensor self, Tensor target, int reduction=Mean) -> Tensor
+  device_check: NoCheck   # TensorIterator
+  python_module: nn
+  dispatch:
+    CPU, CUDA: l1_loss
+
+- func: l1_loss_backward(Tensor grad_output, Tensor self, Tensor target, int reduction) -> Tensor
+  python_module: nn
+  dispatch:
+    CPU, CUDA: l1_loss_backward
+
 - func: smooth_l1_loss.out(Tensor self, Tensor target, int reduction=Mean, float beta=1.0, *, Tensor(a!) out) -> Tensor(a!)
   device_check: NoCheck   # TensorIterator
   structured: True
@@ -8844,16 +8841,10 @@
   structured_delegate: smooth_l1_loss.out
   python_module: nn
 
-- func: smooth_l1_loss_backward.grad_input(Tensor grad_output, Tensor self, Tensor target, int reduction, float beta, *, Tensor(a!) grad_input) -> Tensor(a!)
-  python_module: nn
-  dispatch:
-    CPU: smooth_l1_loss_backward_out
-    CUDA: smooth_l1_loss_backward_out
-
 - func: smooth_l1_loss_backward(Tensor grad_output, Tensor self, Tensor target, int reduction, float beta) -> Tensor
   python_module: nn
   dispatch:
-    CompositeExplicitAutograd: smooth_l1_loss_backward
+    CPU, CUDA: smooth_l1_loss_backward
 
 - func: huber_loss.out(Tensor self, Tensor target, int reduction=Mean, float delta=1.0, *, Tensor(a!) out) -> Tensor(a!)
   python_module: nn
