remove kl_div_backward from aten namespace
ghstack-source-id: d040b7837f8a96155f2c9c69d4abbc81840c45e7
Pull Request resolved: https://github.com/pytorch/pytorch/pull/68419

--- a/tools/autograd/derivatives.yaml
+++ b/tools/autograd/derivatives.yaml
@@ -1750,9 +1750,10 @@
   self: not_implemented("embedding_renorm")
 
 - name: kl_div(Tensor self, Tensor target, int reduction=Mean, *, bool log_target=False) -> Tensor
-  self: kl_div_backward_aux(grad, self, target, reduction, log_target)
-  target: kl_div_target_backward_aux(grad, self, target, reduction, log_target)
-  result: apply_loss_reduction(kl_div_backward_aux(self_t, self_p, target_p, at::Reduction::None, log_target) +  kl_div_target_backward_aux(target_t, self_p, target_p, at::Reduction::None, log_target), reduction)
+  self: kl_div_backward(grad, self, target, reduction, log_target)
+  target: kl_div_target_backward(grad, self, target, reduction, log_target)
+  result: apply_loss_reduction(kl_div_backward(self_t, self_p, target_p, at::Reduction::None, log_target) +  kl_div_target_backward(target_t, self_p, target_p, at::Reduction::None, log_target), reduction)
+
 
 - name: l1_loss(Tensor self, Tensor target, int reduction=Mean) -> Tensor
   self: l1_loss_backward(grad, self, target, reduction)
